---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2021-01-03
  Major Features:
    - Support a toggle button (hidden by default; use mod settings to unhide it) that can globally clean up the mod's alternate forces that it creates on the file. You can use this button to cleanse your file before you disable the mod entirely :-)
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2020-12-14
  Bugfixes:
    - Fix mod_gui crash when first enabling the mod on an existing save or upgrading the mod (i.e. migration scripts run).
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2020-12-13
  Changes:
    - Target Factorio 1.1 from now on.
    - Remove reference to force.auto_character_trash_slots (no longer present in 1.1).
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2020-05-05
  Bugfixes:
    - Fix research replication logic between primary -> alternative forces in game to NOT corrupt the primary force's current research level for space science technologies.
      - Sorry about this bug. Programming is hard :-(
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2020-04-29
  Bugfixes:
    - Preventive medicine: Remove use of consuming='script-only' option from keyboard shortcut prototype.
      - (Factorio devs recently announced this option will break in an upcoming update.)
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2020-04-28
  Bugfixes:
    - Sync force logistics request attributes to alternate game force upon every button toggle.