@@ -1,1 +1,2 @@
 global.globally_disabled = false
+global.to_be_deconstructed_filter_supported = nil
